--- a/HotelGarage/Views/Reservations/Create.cshtml
+++ b/HotelGarage/Views/Reservations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelGarage.Models.Reservation
+﻿@model HotelGarage.ViewModels.NewReservationViewModel
 @{
     ViewBag.Title = "Nová rezervace";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,29 +10,55 @@
 {
     @Html.AntiForgeryToken();
     <div class="form-group">
-        @Html.LabelFor(r => r.LicensePlate, "Státní Poznávací Značka")
-        @Html.TextBoxFor(r => r.LicensePlate, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(r => r.LicensePlate)
+        @Html.LabelFor(c => c.Reservation.LicensePlate, "Státní Poznávací Značka")
+        @Html.TextBoxFor(c => c.Reservation.LicensePlate, new { @class = "form-control SPZbox", autofocus = "autofocus", @Value = "Doplňte", data_id = "spz-visible"})
+        @Html.ValidationMessageFor(c => c.Reservation.LicensePlate)
     </div>
     <div class="form-group">
-        @Html.ActionLink("Nové Auto", "Create", "Cars", new { Cars = Model }, new { type = "submit", @class = "btn btn-primary" })
+        @Html.TextBoxFor(c => c.Car.LicensePlate, new { @class = "form-control", autofocus = "autofocus", @Value = "Doplňte", data_id = "spz-hidden", style="display:none;"})
     </div>
     <div class="form-group">
-        @Html.LabelFor(r => r.Arrival, "Příjezd")
-        @Html.TextBoxFor(r => r.Arrival, new { @class = "form-control", type = "datetime-local",
+        @Html.LabelFor(r => r.Reservation.Arrival, "Příjezd")
+        @Html.TextBoxFor(r => r.Reservation.Arrival, new { @class = "form-control", type = "datetime-local",
             @Value = DateTime.Now.ToString("yyyy-MM-ddTHH:mm")})
-        @Html.ValidationMessageFor(r => r.Arrival)
+        @Html.ValidationMessageFor(r => r.Reservation.Arrival)
     </div>
     <div class="form-group">
-        @Html.LabelFor(r => r.Departure, "Odjezd")
-        @Html.TextBoxFor(r => r.Departure, new { @class = "form-control", type = "datetime-local",
+        @Html.LabelFor(r => r.Reservation.Departure, "Odjezd")
+        @Html.TextBoxFor(r => r.Reservation.Departure, new { @class = "form-control", type = "datetime-local",
             @Value = DateTime.Now.AddDays(1).ToString("yyyy-MM-ddT12:00")})
-        @Html.ValidationMessageFor(r => r.Departure)
+        @Html.ValidationMessageFor(r => r.Reservation.Departure)
     </div>
     <div class="form-group form-inline">
-        @Html.LabelFor(r => r.IsRegistered, "Je Registrovaná?")
-        @Html.CheckBoxFor(r => r.IsRegistered, new { @class = "form-control" })
-        @Html.ValidationMessageFor(r => r.IsRegistered)
+        @Html.LabelFor(r => r.Reservation.IsRegistered, "Je Registrovaná?")
+        @Html.CheckBoxFor(r => r.Reservation.IsRegistered, new { @class = "form-control" })
+        @Html.ValidationMessageFor(r => r.Reservation.IsRegistered)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(c => c.Car.CarModel, "Typ Auta")
+        @Html.TextBoxFor(c => c.Car.CarModel, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Car.CarModel)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(c => c.Car.GuestsName, "Jméno Hosta")
+        @Html.TextBoxFor(c => c.Car.GuestsName, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Car.GuestsName)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(c => c.Car.GuestRoomNumber, "Číslo Pokoje Hosta")
+        @Html.TextBoxFor(c => c.Car.GuestRoomNumber, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Car.GuestRoomNumber)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(c => c.Car.PricePerNight, "Cena za Noc v EUR")
+        @Html.TextBoxFor(c => c.Car.PricePerNight, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Car.PricePerNight)
+    </div>
+    <div class="form-group form-inline">
+        @Html.LabelFor(c => c.Car.IsEmployee, "Zaměstnanec?")
+        @Html.CheckBoxFor(c => c.Car.IsEmployee, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Car.IsEmployee)
     </div>
     <button type="submit" class="btn btn-primary">Uložit</button>
 }
@@ -41,6 +67,7 @@
 @section scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
+    
 }
 
 
