--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -9,10 +9,9 @@
     <a href="javascript:void()" class="js-sOPChange">@Model.StateOfPlace</a>
     <nav class="nav sOPActionLink js-sOPActionLink" id=@Model.Id>
         @Html.ActionLink("Reserve",
-            "CheckIn",
-            "Parking",
-            new { pPlaceId = Model.Id,
-                reservationId = Model.ReservationId },
+            "Create",
+            "Reservations",
+            new { pPlaceId = Model.Id },
             new { @class = "nav-link js-reserve" })
 
         @Html.ActionLink("Check In",
