--- a/HotelGarage/Views/Reservations/Form.cshtml
+++ b/HotelGarage/Views/Reservations/Form.cshtml
@@ -6,23 +6,23 @@
 
 <h2>Nová rezervace</h2>
 <br />
-@using (Html.BeginForm("Create", "Reservations"))
+@using (Html.BeginForm("Save", "Reservations"))
 {
     @Html.AntiForgeryToken();
     <div class="form-group">
         @Html.LabelFor(c => c.LicensePlate, "Státní Poznávací Značka")
-        @Html.TextBoxFor(c => c.LicensePlate, new { @class = "form-control SPZbox", autofocus = "autofocus", @Value = "Doplňte", data_id = "spz-visible" })
+        @Html.TextBoxFor(c => c.LicensePlate, new { @class = "form-control SPZbox", autofocus = "autofocus", data_id = "spz-visible" })
         @Html.ValidationMessageFor(c => c.LicensePlate)
     </div>
     <div class="form-group">
-        @Html.TextBoxFor(c => c.Car.LicensePlate, new { @class = "form-control", autofocus = "autofocus", @Value = "Doplňte", data_id = "spz-hidden", style = "display:none;" })
-    </div>
-      <div class="form-group">
-        @Html.TextBoxFor(c => c.ParkingPlaceId, new { @class = "form-control", autofocus = "autofocus", @Value = Model.ParkingPlaceId, style = "display:none;" })
+        @Html.TextBoxFor(c => c.Car.LicensePlate, new { @class = "form-control", data_id = "spz-hidden", style = "display:none;" })
+        @Html.TextBoxFor(c => c.ParkingPlaceId, new { @class = "form-control", @Value = Model.ParkingPlaceId, style = "display:none;" })
+        @Html.TextBoxFor(c => c.Id, new { @class = "form-control", @Value = Model.Id, style = "display:none;" })
+        @Html.TextBoxFor(c => c.StateOfReservationId, new { @class = "form-control", @Value = Model.StateOfReservationId, style = "display:none;" })
     </div>
     <div class="form-group">
         @Html.LabelFor(r => r.Arrival, "Příjezd")
-        @if (Model.ParkingPlaceId != 0)
+        @if (Model.StateOfReservationId == 2)
         {
             @Html.TextBoxFor(r => r.Arrival, new { @class = "form-control", type = "datetime-local",
             @Value = DateTime.Now.ToString("yyyy-MM-ddTHH:mm"), @readonly = "readonly" })
