oprava logiky ukladani upravenych rezervaci

--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -4,7 +4,7 @@
     <h5 class="card-title">@Model.LicensePlate</h5>
     <p class="card-text">
         @Model.PPlaceName<br>
-        @Model.Departure
+        odj: @Model.Departure
     </p>
     <a href="javascript:void()" class="js-sOPChange">@Model.StateOfPlace</a>
     <nav class="nav sOPActionLink js-sOPActionLink" id=@Model.Id>
