--- a/HotelGarage/Content/Site.css
+++ b/HotelGarage/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin-top: 90px;
 }
 
@@ -58,10 +58,6 @@ span.field-validation-error {
     color: #f8f9fa;
 }
 
-body {
-    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 17px;
-}
 label {
     
     font-weight: normal;
@@ -84,22 +80,24 @@ input[type="radio"], input[type="checkbox"]
     width: 170px;
 }
 
+.card-title {
+    height: 30px;
+    color:black;
+}
+
 .card-body {
     padding: 10px;
 }
 
-a.btn {
+.card-text{
+    font-size:0.9em;
+}
+
+a.btn, p.btn {
     width: 148px;
     text-align: center;
     border: none;
-}
-
-.btn-success {
-    margin-top: 24px
-}
-
-.btn-light {
-    margin-top: 24px
+    padding: 0.2rem 0.75rem;
 }
 
 .parkovaciMistoPrazdne {
