--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HotelGarage.Dtos.ParkingPlaceDto
 
 <div class="card-body">
-    <h5 class="card-title">@Model.LicensePlate</h5>
+    <p class="card-title">@Model.LicensePlate</p>
     <p class="card-text">
         @Model.PPlaceName<br>
         odj: @Model.Departure
