--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -1,11 +1,11 @@
 ﻿@model HotelGarage.Dtos.ParkingPlaceDto
 
 <div class="card-body">
-    <p class="card-title" >@Model.ParkPlaceShortLicensePlate</p>
+    <p class="card-title" >@Model.LicensePlate</p>
     <p class="card-text" data-bbox-prijezd=@Model.ArrivalBootbox data-bbox-odjezd=@Model.DepartureBootbox 
-       data-bbox-pokoj=@Model.RoomBootbox data-bbox-jmeno=@Model.NameBootbox 
+       data-bbox-pokoj=@Model.RoomNumberBootbox data-bbox-jmeno=@Model.GuestNameBootbox
        data-bbox-cena=@Model.PricePerNightBootbox data-bbox-spz=@Model.LicensePlateBootbox 
-       data-bbox-typAuta=@Model.CarTypeBootbox data-bbox-zamestnanec=@Model.EmployeeBootbox>
+       data-bbox-typAuta=@Model.CarModelBootbox data-bbox-zamestnanec=@Model.IsEmployeeBootbox>
         @Model.PPlaceName<br>
         odj: @Model.Departure
     </p>
