implementace zruseni rezervace (zmena stavu a vymazani z prirazeneho park. mista)

--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -160,7 +160,6 @@
             <h2>No Show rezervace</h2>
             <br />
             <div>
-                @{int j = 0;}
                 @foreach (var reservation in Model.NoShowReservations)
                 {
                     <div class="row alert alert-danger">
@@ -172,17 +171,18 @@
                         </div>
                         <div>
                             <div class="input-group justify-content-center">
-                                @Html.DropDownListFor(r => r.ParkingPlaceName,
-                                    new SelectList(Model.FreeParkingPlaces),
-                                    new {@class= "custom-select", @id="inputGroupSelect04",
-                                        value = reservation.ParkingPlaceId, value_id=j })
-                                <div class="input-group-append">
-                                    <button id="select-link" data-id='@reservation.Id'
-                                            class="btn btn-warning select-link" type="submit" value-id='@j'>
-                                        Přiřadit Místo
-                                    </button>
+                                    @Html.DropDownListFor(r => r.ParkingPlaceName,
+                                        new SelectList(Model.FreeParkingPlaces),
+                                        new {@class= "custom-select disabled", @id="inputGroupSelect04",
+                                            value = reservation.ParkingPlaceId, disabled = "disabled"
+                                        })
+                                    <div class="input-group-append">
+                                        <button id="select-link" data-id='@reservation.Id'
+                                                class="btn btn-warning select-link" type="submit" disabled="disabled">
+                                            Přiřadit Místo
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
                             <div class="row justify-content-center">
                                 <div>
                                     @Html.ActionLink("Upravit",
@@ -194,25 +194,14 @@
                                 <div class="nav-link">|</div>
                                 <div style="text-align:center">
                                     @Html.ActionLink("Smazat",
-                                        "CheckIn",
-                                        "Parking",
-                                        new { pPlaceId = reservation.ParkingPlaceId,
-                                            reservationId = reservation.Id},
-                                        new { @class = "nav-link odkaz-prijezd" })
-                                </div>
-                                <div class="nav-link">|</div>
-                                <div style="text-align:center">
-                                    @Html.ActionLink("Check In",
-                                        "CheckIn",
-                                        "Parking",
-                                        new { pPlaceId = reservation.ParkingPlaceId,
-                                            reservationId = reservation.Id},
+                                        "Delete",
+                                        "Reservations",
+                                        new { resId = reservation.Id},
                                         new { @class = "nav-link odkaz-prijezd" })
                                 </div>
                             </div>
                         </div>
                     </div>
-                    j++;
                 }
             </div>
             <br />
@@ -253,10 +242,9 @@
                                 <div class="nav-link">|</div>
                                 <div style="text-align:center">
                                     @Html.ActionLink("Smazat",
-                                        "CheckIn",
-                                        "Parking",
-                                        new { pPlaceId = reservation.ParkingPlaceId,
-                                            reservationId = reservation.Id},
+                                        "Delete",
+                                        "Reservations",
+                                        new { resId = reservation.Id},
                                         new { @class = "nav-link odkaz-prijezd" })
                                 </div>
                                 <div class="nav-link">|</div>
