uprava spravneho zobrazeni dat v res. formu, pridani scriptu na obarvovani checkboxu na registraci, znemozneni kliknout na checkin u neprirazene rezervace

--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -253,8 +253,8 @@
                                         "CheckIn",
                                         "Parking",
                                         new { pPlaceId = reservation.ParkingPlaceId,
-                                            reservationId = reservation.Id},
-                                        new { @class = "nav-link odkaz-prijezd" })
+                                            reservationId = reservation.Id},(reservation.ParkingPlaceName == "Nepřiřazeno")?
+                                        new { @class = "nav-link odkaz-prijezd disabled",  @onclick = "javascript:return false;" } : (object)new { @class = "nav-link odkaz-prijezd" })
                                 </div>
                             </div>
                         </div>
