--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -5,7 +5,8 @@
     <p class="card-text" data-bbox-prijezd=@Model.ArrivalBootbox data-bbox-odjezd=@Model.DepartureBootbox 
        data-bbox-pokoj=@Model.RoomNumberBootbox data-bbox-jmeno=@Model.GuestNameBootbox
        data-bbox-cena=@Model.PricePerNightBootbox data-bbox-spz=@Model.LicensePlateBootbox 
-       data-bbox-typAuta=@Model.CarModelBootbox data-bbox-zamestnanec=@Model.IsEmployeeBootbox>
+       data-bbox-typAuta=@Model.CarModelBootbox data-bbox-zamestnanec=@Model.IsEmployeeBootbox
+       data-bbox-jeRegistrovan=@Model.IsRegisteredBootbox>
         @Model.PPlaceName<br>
         odj: @Model.Departure
     </p>
