--- a/HotelGarage/Views/Reservations/Form.cshtml
+++ b/HotelGarage/Views/Reservations/Form.cshtml
@@ -3,19 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@{string arrival = null, header = null;
-    if (Model.Id == 0)
-    { arrival = DateTime.Now.ToString("yyyy-MM-ddTHH:mm");
-        header = "Nová Rezervace";
-    }
-    else
-    {
-        arrival = Model.Arrival.ToString("yyyy-MM-ddTHH:mm");
-        header = "Upravit Rezervaci";
-    }
-}
-
-<h2>@header</h2>
+<h2>@((Model.Id == 0) ? "Nová Rezervace" : "Upravit Rezervaci")</h2>
 <br />
 @using (Html.BeginForm("Save", "Reservations"))
 {
@@ -33,31 +21,26 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(r => r.Arrival, "Příjezd")
-        @if (Model.StateOfReservationId == 2)
-        {
-            @Html.TextBoxFor(r => r.Arrival, new { @class = "form-control", type = "datetime-local",
-                @Value = arrival, disabled = "disabled" })}
-        else
-        {
-            @Html.TextBoxFor(r => r.Arrival, new { @class = "form-control", type = "datetime-local", @Value = arrival})
-        }
+        @Html.TextBoxFor(r => r.Arrival, (Model.StateOfReservationId == 2 ?
+            (object)new { @class = "form-control", type = "datetime-local",
+                @Value = Model.Arrival.ToString("yyyy-MM-ddTHH:mm"),
+                @readonly = "readonly"
+            } :
+            (object)new { @class = "form-control", type = "datetime-local",
+                @Value = Model.Arrival.ToString("yyyy-MM-ddTHH:mm")}))
         @Html.ValidationMessageFor(r => r.Arrival)
     </div>
     <div class="form-group">
         @Html.LabelFor(r => r.Departure, "Odjezd")
         @Html.TextBoxFor(r => r.Departure, new { @class = "form-control", type = "datetime-local",
-            @Value = DateTime.Now.AddDays(1).ToString("yyyy-MM-ddT12:00")})
+            @Value = Model.Departure.ToString("yyyy-MM-ddT12:00")})
         @Html.ValidationMessageFor(r => r.Departure)
     </div>
-    <div class="form-group form-inline">
+    <div class="form-group form-inline" id="isRegisteredDiv">
         @Html.LabelFor(r => r.IsRegistered, "Je Registrovaná?")
-        @if (Model.StateOfReservationId == 2)
-        {
-            @Html.CheckBoxFor(r => r.IsRegistered, new { @class = "form-control" })}
-        else
-        {
-            @Html.CheckBoxFor(r => r.IsRegistered, new { @class = "form-control", @disabled = "disabled" })}
-        @Html.ValidationMessageFor(r => r.IsRegistered)
+            @Html.CheckBoxFor(r => r.IsRegistered, (Model.StateOfReservationId == 2?
+            (object)new { @class = "form-control" }: (object)new { @class = "form-control", @disabled = "disabled" }))
+            @Html.ValidationMessageFor(r => r.IsRegistered)
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Car.CarModel, "Typ Auta")
